--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+.nav-bar{
+	background-color:#D3D3D3;
+	padding:10px;
+}
+.nav-bar li{
+	display:inline;
+	margin-right:1rem;
+}
+.nav-bar ul{
+	list-style:none;
+}
